Drop -XX:MaxPermSize=128m from the default JVM arguments which is not supported past JDK 8.